// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppContainer /> with className matches its snapshot 1`] = `
<StyledFabricBase
  theme={
    Object {
      "disableGlobalClassNames": false,
      "fonts": Object {
        "large": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.8rem",
          "fontWeight": 300,
          "lineHeight": "2.4rem",
        },
        "medium": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.5rem",
          "fontWeight": 400,
          "lineHeight": "2.0rem",
        },
        "mediumPlus": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "15px",
          "fontWeight": 400,
        },
        "mega": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "72px",
          "fontWeight": 100,
        },
        "small": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.2rem",
          "fontWeight": 400,
          "lineHeight": "1.6rem",
        },
        "smallPlus": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.4rem",
          "fontWeight": 400,
          "lineHeight": "2.0rem",
        },
        "superLarge": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "42px",
          "fontWeight": 100,
        },
        "tiny": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "10px",
          "fontWeight": 600,
        },
        "xLarge": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "2.2rem",
          "fontWeight": 100,
          "lineHeight": "2.8rem",
        },
        "xSmall": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.0rem",
          "fontWeight": 400,
          "lineHeight": "1.6rem",
        },
        "xxLarge": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "2.4rem",
          "fontWeight": 100,
          "lineHeight": "2.8rem",
        },
      },
      "isInverted": false,
      "palette": Object {
        "accent": "#6c98d9",
        "black": "#000000",
        "blackTranslucent40": "rgba(0,0,0,.4)",
        "blue": "#0078d4",
        "blueDark": "#002050",
        "blueLight": "#00bcf2",
        "blueMid": "#00188f",
        "green": "#107c10",
        "greenDark": "#004b1c",
        "greenLight": "#bad80a",
        "magenta": "#b4009e",
        "magentaDark": "#5c005c",
        "magentaLight": "#e3008c",
        "neutralDark": "#dde0e6",
        "neutralLight": "#edeff2",
        "neutralLighter": "#f3f5f8",
        "neutralLighterAlt": "#f8f8f8",
        "neutralPrimary": "#343a41",
        "neutralPrimaryAlt": "#495361",
        "neutralQuaternary": "#d0d0d0",
        "neutralQuaternaryAlt": "#dadada",
        "neutralSecondary": "#646d7a",
        "neutralSecondaryAlt": "#767676",
        "neutralTertiary": "#dde0e6",
        "neutralTertiaryAlt": "#a8b0bd",
        "orange": "#d83b01",
        "orangeLight": "#ea4300",
        "orangeLighter": "#ff8c00",
        "purple": "#5c2d91",
        "purpleDark": "#32145a",
        "purpleLight": "#b4a0ff",
        "red": "#d1423b",
        "redDark": "#9e3028",
        "teal": "#008272",
        "tealDark": "#004b50",
        "tealLight": "#00b294",
        "themeDark": "#386cbb",
        "themeDarkAlt": "#2f5c9f",
        "themeDarker": "#264f8c",
        "themeLight": "#c7e0f4",
        "themeLighter": "#9ac3ff",
        "themeLighterAlt": "#e9eff8",
        "themePrimary": "#6c98d9",
        "themeSecondary": "#2b88d8",
        "themeTertiary": "#71afe5",
        "white": "#ffffff",
        "whiteTranslucent40": "rgba(255,255,255,.4)",
        "yellow": "#ffc56c",
        "yellowLight": "#fff100",
      },
      "semanticColors": Object {
        "actionLink": "#343a41",
        "actionLinkHovered": "#dde0e6",
        "blockingBackground": "rgba(234, 67, 0, .2)",
        "bodyBackground": "#ffffff",
        "bodyDivider": "#dde0e6",
        "bodyFrameBackground": "#ffffff",
        "bodyFrameDivider": "#edeff2",
        "bodyStandoutBackground": "#ffffff",
        "bodySubtext": "#646d7a",
        "bodyText": "#343a41",
        "bodyTextChecked": "#000000",
        "buttonBackground": "#f3f5f8",
        "buttonBackgroundChecked": "#a8b0bd",
        "buttonBackgroundCheckedHovered": "#edeff2",
        "buttonBackgroundHovered": "#edeff2",
        "buttonBackgroundPressed": "#edeff2",
        "buttonBorder": "transparent",
        "buttonBorderDisabled": "transparent",
        "buttonText": "#495361",
        "buttonTextChecked": "#dde0e6",
        "buttonTextCheckedHovered": "#000000",
        "buttonTextDisabled": "#d0d0d0",
        "buttonTextHovered": "#000000",
        "buttonTextPressed": "#dde0e6",
        "defaultStateBackground": "#edeff2",
        "disabledBackground": "#f3f5f8",
        "disabledBodyText": "#a8b0bd",
        "disabledSubtext": "#d0d0d0",
        "disabledText": "#dde0e6",
        "errorBackground": "#fb7f78",
        "errorText": "#d1423b",
        "focusBorder": "#000000",
        "inputBackground": "#ffffff",
        "inputBackgroundChecked": "#386cbb",
        "inputBackgroundCheckedHovered": "#6c98d9",
        "inputBorder": "#dde0e6",
        "inputBorderHovered": "#dde0e6",
        "inputFocusBorderAlt": "#6c98d9",
        "inputForegroundChecked": "#ffffff",
        "inputPlaceholderText": "#646d7a",
        "link": "#386cbb",
        "linkHovered": "#264f8c",
        "listBackground": "#ffffff",
        "listHeaderBackgroundHovered": "#f3f5f8",
        "listHeaderBackgroundPressed": "#edeff2",
        "listItemBackgroundChecked": "#edeff2",
        "listItemBackgroundCheckedHovered": "#dadada",
        "listItemBackgroundHovered": "#f3f5f8",
        "listText": "#343a41",
        "listTextColor": "#343a41",
        "menuHeader": "#6c98d9",
        "menuIcon": "#6c98d9",
        "menuItemBackgroundChecked": "#edeff2",
        "menuItemBackgroundHovered": "#f3f5f8",
        "primaryButtonBackground": "#6c98d9",
        "primaryButtonBackgroundHovered": "#2f5c9f",
        "primaryButtonBackgroundPressed": "#386cbb",
        "primaryButtonBorder": "transparent",
        "primaryButtonText": "#ffffff",
        "primaryButtonTextHovered": "#ffffff",
        "primaryButtonTextPressed": "#ffffff",
        "smallInputBorder": "#646d7a",
        "successBackground": "rgba(186, 216, 10, .2)",
        "variantBorder": "#edeff2",
        "variantBorderHovered": "#dde0e6",
        "warningBackground": "#ffc56c",
        "warningHighlight": "#ffb900",
        "warningText": "#333333",
      },
      "typography": Object {
        "families": Object {
          "default": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "monospace": "Menlo, Monaco, \\"Courier New\\", monospace",
        },
        "sizes": Object {
          "large": "17px",
          "medium": "14px",
          "mediumPlus": "15px",
          "mega": "72px",
          "mini": "10px",
          "small": "12px",
          "smallPlus": "13px",
          "xLarge": "21px",
          "xSmall": "11px",
          "xxLarge": "28px",
        },
        "variants": Object {
          "caption": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "11px",
            "weight": 400,
          },
          "default": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "14px",
            "weight": 400,
          },
          "h1": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "72px",
            "weight": 100,
          },
          "h2": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "28px",
            "weight": 100,
          },
          "h3": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "21px",
            "weight": 100,
          },
          "h4": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "17px",
            "weight": 100,
          },
          "h5": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "15px",
            "weight": 100,
          },
          "link": Object {
            "color": "#386cbb",
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": "#264f8c",
            "size": "14px",
            "weight": 400,
          },
        },
        "weights": Object {
          "bold": 700,
          "default": 400,
          "light": 100,
          "regular": 400,
          "semibold": 600,
        },
      },
    }
  }
>
  <Customizer
    scopedSettings={
      Object {
        "CalloutContent": Object {
          "styles": Object {
            "calloutMain": Object {
              "boxSizing": "border-box",
              "selectors": Object {
                "*, *::before, *::after": Object {
                  "boxSizing": "inherit",
                },
              },
            },
          },
        },
        "Modal": Object {
          "styles": Object {
            "root": Object {
              "boxSizing": "border-box",
              "selectors": Object {
                "*, *::before, *::after": Object {
                  "boxSizing": "inherit",
                },
              },
            },
          },
        },
      }
    }
    settings={
      Object {
        "theme": Object {
          "disableGlobalClassNames": false,
          "fonts": Object {
            "large": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.8rem",
              "fontWeight": 300,
              "lineHeight": "2.4rem",
            },
            "medium": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "2.0rem",
            },
            "mediumPlus": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "15px",
              "fontWeight": 400,
            },
            "mega": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "72px",
              "fontWeight": 100,
            },
            "small": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.2rem",
              "fontWeight": 400,
              "lineHeight": "1.6rem",
            },
            "smallPlus": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.4rem",
              "fontWeight": 400,
              "lineHeight": "2.0rem",
            },
            "superLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "42px",
              "fontWeight": 100,
            },
            "tiny": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "10px",
              "fontWeight": 600,
            },
            "xLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "2.2rem",
              "fontWeight": 100,
              "lineHeight": "2.8rem",
            },
            "xSmall": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.0rem",
              "fontWeight": 400,
              "lineHeight": "1.6rem",
            },
            "xxLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "2.4rem",
              "fontWeight": 100,
              "lineHeight": "2.8rem",
            },
          },
          "isInverted": false,
          "palette": Object {
            "accent": "#6c98d9",
            "black": "#000000",
            "blackTranslucent40": "rgba(0,0,0,.4)",
            "blue": "#0078d4",
            "blueDark": "#002050",
            "blueLight": "#00bcf2",
            "blueMid": "#00188f",
            "green": "#107c10",
            "greenDark": "#004b1c",
            "greenLight": "#bad80a",
            "magenta": "#b4009e",
            "magentaDark": "#5c005c",
            "magentaLight": "#e3008c",
            "neutralDark": "#dde0e6",
            "neutralLight": "#edeff2",
            "neutralLighter": "#f3f5f8",
            "neutralLighterAlt": "#f8f8f8",
            "neutralPrimary": "#343a41",
            "neutralPrimaryAlt": "#495361",
            "neutralQuaternary": "#d0d0d0",
            "neutralQuaternaryAlt": "#dadada",
            "neutralSecondary": "#646d7a",
            "neutralSecondaryAlt": "#767676",
            "neutralTertiary": "#dde0e6",
            "neutralTertiaryAlt": "#a8b0bd",
            "orange": "#d83b01",
            "orangeLight": "#ea4300",
            "orangeLighter": "#ff8c00",
            "purple": "#5c2d91",
            "purpleDark": "#32145a",
            "purpleLight": "#b4a0ff",
            "red": "#d1423b",
            "redDark": "#9e3028",
            "teal": "#008272",
            "tealDark": "#004b50",
            "tealLight": "#00b294",
            "themeDark": "#386cbb",
            "themeDarkAlt": "#2f5c9f",
            "themeDarker": "#264f8c",
            "themeLight": "#c7e0f4",
            "themeLighter": "#9ac3ff",
            "themeLighterAlt": "#e9eff8",
            "themePrimary": "#6c98d9",
            "themeSecondary": "#2b88d8",
            "themeTertiary": "#71afe5",
            "white": "#ffffff",
            "whiteTranslucent40": "rgba(255,255,255,.4)",
            "yellow": "#ffc56c",
            "yellowLight": "#fff100",
          },
          "semanticColors": Object {
            "actionLink": "#343a41",
            "actionLinkHovered": "#dde0e6",
            "blockingBackground": "rgba(234, 67, 0, .2)",
            "bodyBackground": "#ffffff",
            "bodyDivider": "#dde0e6",
            "bodyFrameBackground": "#ffffff",
            "bodyFrameDivider": "#edeff2",
            "bodyStandoutBackground": "#ffffff",
            "bodySubtext": "#646d7a",
            "bodyText": "#343a41",
            "bodyTextChecked": "#000000",
            "buttonBackground": "#f3f5f8",
            "buttonBackgroundChecked": "#a8b0bd",
            "buttonBackgroundCheckedHovered": "#edeff2",
            "buttonBackgroundHovered": "#edeff2",
            "buttonBackgroundPressed": "#edeff2",
            "buttonBorder": "transparent",
            "buttonBorderDisabled": "transparent",
            "buttonText": "#495361",
            "buttonTextChecked": "#dde0e6",
            "buttonTextCheckedHovered": "#000000",
            "buttonTextDisabled": "#d0d0d0",
            "buttonTextHovered": "#000000",
            "buttonTextPressed": "#dde0e6",
            "defaultStateBackground": "#edeff2",
            "disabledBackground": "#f3f5f8",
            "disabledBodyText": "#a8b0bd",
            "disabledSubtext": "#d0d0d0",
            "disabledText": "#dde0e6",
            "errorBackground": "#fb7f78",
            "errorText": "#d1423b",
            "focusBorder": "#000000",
            "inputBackground": "#ffffff",
            "inputBackgroundChecked": "#386cbb",
            "inputBackgroundCheckedHovered": "#6c98d9",
            "inputBorder": "#dde0e6",
            "inputBorderHovered": "#dde0e6",
            "inputFocusBorderAlt": "#6c98d9",
            "inputForegroundChecked": "#ffffff",
            "inputPlaceholderText": "#646d7a",
            "link": "#386cbb",
            "linkHovered": "#264f8c",
            "listBackground": "#ffffff",
            "listHeaderBackgroundHovered": "#f3f5f8",
            "listHeaderBackgroundPressed": "#edeff2",
            "listItemBackgroundChecked": "#edeff2",
            "listItemBackgroundCheckedHovered": "#dadada",
            "listItemBackgroundHovered": "#f3f5f8",
            "listText": "#343a41",
            "listTextColor": "#343a41",
            "menuHeader": "#6c98d9",
            "menuIcon": "#6c98d9",
            "menuItemBackgroundChecked": "#edeff2",
            "menuItemBackgroundHovered": "#f3f5f8",
            "primaryButtonBackground": "#6c98d9",
            "primaryButtonBackgroundHovered": "#2f5c9f",
            "primaryButtonBackgroundPressed": "#386cbb",
            "primaryButtonBorder": "transparent",
            "primaryButtonText": "#ffffff",
            "primaryButtonTextHovered": "#ffffff",
            "primaryButtonTextPressed": "#ffffff",
            "smallInputBorder": "#646d7a",
            "successBackground": "rgba(186, 216, 10, .2)",
            "variantBorder": "#edeff2",
            "variantBorderHovered": "#dde0e6",
            "warningBackground": "#ffc56c",
            "warningHighlight": "#ffb900",
            "warningText": "#333333",
          },
          "typography": Object {
            "families": Object {
              "default": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "monospace": "Menlo, Monaco, \\"Courier New\\", monospace",
            },
            "sizes": Object {
              "large": "17px",
              "medium": "14px",
              "mediumPlus": "15px",
              "mega": "72px",
              "mini": "10px",
              "small": "12px",
              "smallPlus": "13px",
              "xLarge": "21px",
              "xSmall": "11px",
              "xxLarge": "28px",
            },
            "variants": Object {
              "caption": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "11px",
                "weight": 400,
              },
              "default": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "14px",
                "weight": 400,
              },
              "h1": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "72px",
                "weight": 100,
              },
              "h2": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "28px",
                "weight": 100,
              },
              "h3": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "21px",
                "weight": 100,
              },
              "h4": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "17px",
                "weight": 100,
              },
              "h5": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "15px",
                "weight": 100,
              },
              "link": Object {
                "color": "#386cbb",
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": "#264f8c",
                "size": "14px",
                "weight": 400,
              },
            },
            "weights": Object {
              "bold": 700,
              "default": 400,
              "light": 100,
              "regular": 400,
              "semibold": 600,
            },
          },
        },
      }
    }
  >
    <div
      className=
          y-appContainer
          TEST_CLASSNAME
          {
            box-sizing: border-box;
          }
          & *, *::before, *::after {
            box-sizing: inherit;
          }
          html {
            font-size: 62.5%;
          }
          html, body {
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
          }
    >
      app container text
    </div>
  </Customizer>
</StyledFabricBase>
`;

exports[`<AppContainer /> with default options matches its snapshot 1`] = `
<StyledFabricBase
  theme={
    Object {
      "disableGlobalClassNames": false,
      "fonts": Object {
        "large": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.8rem",
          "fontWeight": 300,
          "lineHeight": "2.4rem",
        },
        "medium": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.5rem",
          "fontWeight": 400,
          "lineHeight": "2.0rem",
        },
        "mediumPlus": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "15px",
          "fontWeight": 400,
        },
        "mega": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "72px",
          "fontWeight": 100,
        },
        "small": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.2rem",
          "fontWeight": 400,
          "lineHeight": "1.6rem",
        },
        "smallPlus": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.4rem",
          "fontWeight": 400,
          "lineHeight": "2.0rem",
        },
        "superLarge": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "42px",
          "fontWeight": 100,
        },
        "tiny": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "10px",
          "fontWeight": 600,
        },
        "xLarge": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "2.2rem",
          "fontWeight": 100,
          "lineHeight": "2.8rem",
        },
        "xSmall": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.0rem",
          "fontWeight": 400,
          "lineHeight": "1.6rem",
        },
        "xxLarge": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "2.4rem",
          "fontWeight": 100,
          "lineHeight": "2.8rem",
        },
      },
      "isInverted": false,
      "palette": Object {
        "accent": "#6c98d9",
        "black": "#000000",
        "blackTranslucent40": "rgba(0,0,0,.4)",
        "blue": "#0078d4",
        "blueDark": "#002050",
        "blueLight": "#00bcf2",
        "blueMid": "#00188f",
        "green": "#107c10",
        "greenDark": "#004b1c",
        "greenLight": "#bad80a",
        "magenta": "#b4009e",
        "magentaDark": "#5c005c",
        "magentaLight": "#e3008c",
        "neutralDark": "#dde0e6",
        "neutralLight": "#edeff2",
        "neutralLighter": "#f3f5f8",
        "neutralLighterAlt": "#f8f8f8",
        "neutralPrimary": "#343a41",
        "neutralPrimaryAlt": "#495361",
        "neutralQuaternary": "#d0d0d0",
        "neutralQuaternaryAlt": "#dadada",
        "neutralSecondary": "#646d7a",
        "neutralSecondaryAlt": "#767676",
        "neutralTertiary": "#dde0e6",
        "neutralTertiaryAlt": "#a8b0bd",
        "orange": "#d83b01",
        "orangeLight": "#ea4300",
        "orangeLighter": "#ff8c00",
        "purple": "#5c2d91",
        "purpleDark": "#32145a",
        "purpleLight": "#b4a0ff",
        "red": "#d1423b",
        "redDark": "#9e3028",
        "teal": "#008272",
        "tealDark": "#004b50",
        "tealLight": "#00b294",
        "themeDark": "#386cbb",
        "themeDarkAlt": "#2f5c9f",
        "themeDarker": "#264f8c",
        "themeLight": "#c7e0f4",
        "themeLighter": "#9ac3ff",
        "themeLighterAlt": "#e9eff8",
        "themePrimary": "#6c98d9",
        "themeSecondary": "#2b88d8",
        "themeTertiary": "#71afe5",
        "white": "#ffffff",
        "whiteTranslucent40": "rgba(255,255,255,.4)",
        "yellow": "#ffc56c",
        "yellowLight": "#fff100",
      },
      "semanticColors": Object {
        "actionLink": "#343a41",
        "actionLinkHovered": "#dde0e6",
        "blockingBackground": "rgba(234, 67, 0, .2)",
        "bodyBackground": "#ffffff",
        "bodyDivider": "#dde0e6",
        "bodyFrameBackground": "#ffffff",
        "bodyFrameDivider": "#edeff2",
        "bodyStandoutBackground": "#ffffff",
        "bodySubtext": "#646d7a",
        "bodyText": "#343a41",
        "bodyTextChecked": "#000000",
        "buttonBackground": "#f3f5f8",
        "buttonBackgroundChecked": "#a8b0bd",
        "buttonBackgroundCheckedHovered": "#edeff2",
        "buttonBackgroundHovered": "#edeff2",
        "buttonBackgroundPressed": "#edeff2",
        "buttonBorder": "transparent",
        "buttonBorderDisabled": "transparent",
        "buttonText": "#495361",
        "buttonTextChecked": "#dde0e6",
        "buttonTextCheckedHovered": "#000000",
        "buttonTextDisabled": "#d0d0d0",
        "buttonTextHovered": "#000000",
        "buttonTextPressed": "#dde0e6",
        "defaultStateBackground": "#edeff2",
        "disabledBackground": "#f3f5f8",
        "disabledBodyText": "#a8b0bd",
        "disabledSubtext": "#d0d0d0",
        "disabledText": "#dde0e6",
        "errorBackground": "#fb7f78",
        "errorText": "#d1423b",
        "focusBorder": "#000000",
        "inputBackground": "#ffffff",
        "inputBackgroundChecked": "#386cbb",
        "inputBackgroundCheckedHovered": "#6c98d9",
        "inputBorder": "#dde0e6",
        "inputBorderHovered": "#dde0e6",
        "inputFocusBorderAlt": "#6c98d9",
        "inputForegroundChecked": "#ffffff",
        "inputPlaceholderText": "#646d7a",
        "link": "#386cbb",
        "linkHovered": "#264f8c",
        "listBackground": "#ffffff",
        "listHeaderBackgroundHovered": "#f3f5f8",
        "listHeaderBackgroundPressed": "#edeff2",
        "listItemBackgroundChecked": "#edeff2",
        "listItemBackgroundCheckedHovered": "#dadada",
        "listItemBackgroundHovered": "#f3f5f8",
        "listText": "#343a41",
        "listTextColor": "#343a41",
        "menuHeader": "#6c98d9",
        "menuIcon": "#6c98d9",
        "menuItemBackgroundChecked": "#edeff2",
        "menuItemBackgroundHovered": "#f3f5f8",
        "primaryButtonBackground": "#6c98d9",
        "primaryButtonBackgroundHovered": "#2f5c9f",
        "primaryButtonBackgroundPressed": "#386cbb",
        "primaryButtonBorder": "transparent",
        "primaryButtonText": "#ffffff",
        "primaryButtonTextHovered": "#ffffff",
        "primaryButtonTextPressed": "#ffffff",
        "smallInputBorder": "#646d7a",
        "successBackground": "rgba(186, 216, 10, .2)",
        "variantBorder": "#edeff2",
        "variantBorderHovered": "#dde0e6",
        "warningBackground": "#ffc56c",
        "warningHighlight": "#ffb900",
        "warningText": "#333333",
      },
      "typography": Object {
        "families": Object {
          "default": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "monospace": "Menlo, Monaco, \\"Courier New\\", monospace",
        },
        "sizes": Object {
          "large": "17px",
          "medium": "14px",
          "mediumPlus": "15px",
          "mega": "72px",
          "mini": "10px",
          "small": "12px",
          "smallPlus": "13px",
          "xLarge": "21px",
          "xSmall": "11px",
          "xxLarge": "28px",
        },
        "variants": Object {
          "caption": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "11px",
            "weight": 400,
          },
          "default": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "14px",
            "weight": 400,
          },
          "h1": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "72px",
            "weight": 100,
          },
          "h2": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "28px",
            "weight": 100,
          },
          "h3": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "21px",
            "weight": 100,
          },
          "h4": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "17px",
            "weight": 100,
          },
          "h5": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "15px",
            "weight": 100,
          },
          "link": Object {
            "color": "#386cbb",
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": "#264f8c",
            "size": "14px",
            "weight": 400,
          },
        },
        "weights": Object {
          "bold": 700,
          "default": 400,
          "light": 100,
          "regular": 400,
          "semibold": 600,
        },
      },
    }
  }
>
  <Customizer
    scopedSettings={
      Object {
        "CalloutContent": Object {
          "styles": Object {
            "calloutMain": Object {
              "boxSizing": "border-box",
              "selectors": Object {
                "*, *::before, *::after": Object {
                  "boxSizing": "inherit",
                },
              },
            },
          },
        },
        "Modal": Object {
          "styles": Object {
            "root": Object {
              "boxSizing": "border-box",
              "selectors": Object {
                "*, *::before, *::after": Object {
                  "boxSizing": "inherit",
                },
              },
            },
          },
        },
      }
    }
    settings={
      Object {
        "theme": Object {
          "disableGlobalClassNames": false,
          "fonts": Object {
            "large": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.8rem",
              "fontWeight": 300,
              "lineHeight": "2.4rem",
            },
            "medium": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "2.0rem",
            },
            "mediumPlus": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "15px",
              "fontWeight": 400,
            },
            "mega": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "72px",
              "fontWeight": 100,
            },
            "small": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.2rem",
              "fontWeight": 400,
              "lineHeight": "1.6rem",
            },
            "smallPlus": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.4rem",
              "fontWeight": 400,
              "lineHeight": "2.0rem",
            },
            "superLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "42px",
              "fontWeight": 100,
            },
            "tiny": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "10px",
              "fontWeight": 600,
            },
            "xLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "2.2rem",
              "fontWeight": 100,
              "lineHeight": "2.8rem",
            },
            "xSmall": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.0rem",
              "fontWeight": 400,
              "lineHeight": "1.6rem",
            },
            "xxLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "2.4rem",
              "fontWeight": 100,
              "lineHeight": "2.8rem",
            },
          },
          "isInverted": false,
          "palette": Object {
            "accent": "#6c98d9",
            "black": "#000000",
            "blackTranslucent40": "rgba(0,0,0,.4)",
            "blue": "#0078d4",
            "blueDark": "#002050",
            "blueLight": "#00bcf2",
            "blueMid": "#00188f",
            "green": "#107c10",
            "greenDark": "#004b1c",
            "greenLight": "#bad80a",
            "magenta": "#b4009e",
            "magentaDark": "#5c005c",
            "magentaLight": "#e3008c",
            "neutralDark": "#dde0e6",
            "neutralLight": "#edeff2",
            "neutralLighter": "#f3f5f8",
            "neutralLighterAlt": "#f8f8f8",
            "neutralPrimary": "#343a41",
            "neutralPrimaryAlt": "#495361",
            "neutralQuaternary": "#d0d0d0",
            "neutralQuaternaryAlt": "#dadada",
            "neutralSecondary": "#646d7a",
            "neutralSecondaryAlt": "#767676",
            "neutralTertiary": "#dde0e6",
            "neutralTertiaryAlt": "#a8b0bd",
            "orange": "#d83b01",
            "orangeLight": "#ea4300",
            "orangeLighter": "#ff8c00",
            "purple": "#5c2d91",
            "purpleDark": "#32145a",
            "purpleLight": "#b4a0ff",
            "red": "#d1423b",
            "redDark": "#9e3028",
            "teal": "#008272",
            "tealDark": "#004b50",
            "tealLight": "#00b294",
            "themeDark": "#386cbb",
            "themeDarkAlt": "#2f5c9f",
            "themeDarker": "#264f8c",
            "themeLight": "#c7e0f4",
            "themeLighter": "#9ac3ff",
            "themeLighterAlt": "#e9eff8",
            "themePrimary": "#6c98d9",
            "themeSecondary": "#2b88d8",
            "themeTertiary": "#71afe5",
            "white": "#ffffff",
            "whiteTranslucent40": "rgba(255,255,255,.4)",
            "yellow": "#ffc56c",
            "yellowLight": "#fff100",
          },
          "semanticColors": Object {
            "actionLink": "#343a41",
            "actionLinkHovered": "#dde0e6",
            "blockingBackground": "rgba(234, 67, 0, .2)",
            "bodyBackground": "#ffffff",
            "bodyDivider": "#dde0e6",
            "bodyFrameBackground": "#ffffff",
            "bodyFrameDivider": "#edeff2",
            "bodyStandoutBackground": "#ffffff",
            "bodySubtext": "#646d7a",
            "bodyText": "#343a41",
            "bodyTextChecked": "#000000",
            "buttonBackground": "#f3f5f8",
            "buttonBackgroundChecked": "#a8b0bd",
            "buttonBackgroundCheckedHovered": "#edeff2",
            "buttonBackgroundHovered": "#edeff2",
            "buttonBackgroundPressed": "#edeff2",
            "buttonBorder": "transparent",
            "buttonBorderDisabled": "transparent",
            "buttonText": "#495361",
            "buttonTextChecked": "#dde0e6",
            "buttonTextCheckedHovered": "#000000",
            "buttonTextDisabled": "#d0d0d0",
            "buttonTextHovered": "#000000",
            "buttonTextPressed": "#dde0e6",
            "defaultStateBackground": "#edeff2",
            "disabledBackground": "#f3f5f8",
            "disabledBodyText": "#a8b0bd",
            "disabledSubtext": "#d0d0d0",
            "disabledText": "#dde0e6",
            "errorBackground": "#fb7f78",
            "errorText": "#d1423b",
            "focusBorder": "#000000",
            "inputBackground": "#ffffff",
            "inputBackgroundChecked": "#386cbb",
            "inputBackgroundCheckedHovered": "#6c98d9",
            "inputBorder": "#dde0e6",
            "inputBorderHovered": "#dde0e6",
            "inputFocusBorderAlt": "#6c98d9",
            "inputForegroundChecked": "#ffffff",
            "inputPlaceholderText": "#646d7a",
            "link": "#386cbb",
            "linkHovered": "#264f8c",
            "listBackground": "#ffffff",
            "listHeaderBackgroundHovered": "#f3f5f8",
            "listHeaderBackgroundPressed": "#edeff2",
            "listItemBackgroundChecked": "#edeff2",
            "listItemBackgroundCheckedHovered": "#dadada",
            "listItemBackgroundHovered": "#f3f5f8",
            "listText": "#343a41",
            "listTextColor": "#343a41",
            "menuHeader": "#6c98d9",
            "menuIcon": "#6c98d9",
            "menuItemBackgroundChecked": "#edeff2",
            "menuItemBackgroundHovered": "#f3f5f8",
            "primaryButtonBackground": "#6c98d9",
            "primaryButtonBackgroundHovered": "#2f5c9f",
            "primaryButtonBackgroundPressed": "#386cbb",
            "primaryButtonBorder": "transparent",
            "primaryButtonText": "#ffffff",
            "primaryButtonTextHovered": "#ffffff",
            "primaryButtonTextPressed": "#ffffff",
            "smallInputBorder": "#646d7a",
            "successBackground": "rgba(186, 216, 10, .2)",
            "variantBorder": "#edeff2",
            "variantBorderHovered": "#dde0e6",
            "warningBackground": "#ffc56c",
            "warningHighlight": "#ffb900",
            "warningText": "#333333",
          },
          "typography": Object {
            "families": Object {
              "default": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "monospace": "Menlo, Monaco, \\"Courier New\\", monospace",
            },
            "sizes": Object {
              "large": "17px",
              "medium": "14px",
              "mediumPlus": "15px",
              "mega": "72px",
              "mini": "10px",
              "small": "12px",
              "smallPlus": "13px",
              "xLarge": "21px",
              "xSmall": "11px",
              "xxLarge": "28px",
            },
            "variants": Object {
              "caption": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "11px",
                "weight": 400,
              },
              "default": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "14px",
                "weight": 400,
              },
              "h1": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "72px",
                "weight": 100,
              },
              "h2": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "28px",
                "weight": 100,
              },
              "h3": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "21px",
                "weight": 100,
              },
              "h4": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "17px",
                "weight": 100,
              },
              "h5": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "15px",
                "weight": 100,
              },
              "link": Object {
                "color": "#386cbb",
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": "#264f8c",
                "size": "14px",
                "weight": 400,
              },
            },
            "weights": Object {
              "bold": 700,
              "default": 400,
              "light": 100,
              "regular": 400,
              "semibold": 600,
            },
          },
        },
      }
    }
  >
    <div
      className=
          y-appContainer
          {
            box-sizing: border-box;
          }
          & *, *::before, *::after {
            box-sizing: inherit;
          }
          html {
            font-size: 62.5%;
          }
          html, body {
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
          }
    >
      app container text
    </div>
  </Customizer>
</StyledFabricBase>
`;

exports[`<AppContainer /> with theme matches its snapshot 1`] = `
<StyledFabricBase
  theme={
    Object {
      "disableGlobalClassNames": false,
      "fonts": Object {
        "large": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.8rem",
          "fontWeight": 300,
          "lineHeight": "2.4rem",
        },
        "medium": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.5rem",
          "fontWeight": 400,
          "lineHeight": "2.0rem",
        },
        "mediumPlus": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "15px",
          "fontWeight": 400,
        },
        "mega": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "72px",
          "fontWeight": 100,
        },
        "small": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.2rem",
          "fontWeight": 400,
          "lineHeight": "1.6rem",
        },
        "smallPlus": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.4rem",
          "fontWeight": 400,
          "lineHeight": "2.0rem",
        },
        "superLarge": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "42px",
          "fontWeight": 100,
        },
        "tiny": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "10px",
          "fontWeight": 600,
        },
        "xLarge": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "2.2rem",
          "fontWeight": 100,
          "lineHeight": "2.8rem",
        },
        "xSmall": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "1.0rem",
          "fontWeight": 400,
          "lineHeight": "1.6rem",
        },
        "xxLarge": Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "fontSize": "2.4rem",
          "fontWeight": 100,
          "lineHeight": "2.8rem",
        },
      },
      "isInverted": true,
      "palette": Object {
        "accent": "#6c98d9",
        "black": "#ffffff",
        "blackTranslucent40": "rgba(0,0,0,.4)",
        "blue": "#0078d4",
        "blueDark": "#002050",
        "blueLight": "#00bcf2",
        "blueMid": "#00188f",
        "green": "#107c10",
        "greenDark": "#004b1c",
        "greenLight": "#bad80a",
        "magenta": "#b4009e",
        "magentaDark": "#5c005c",
        "magentaLight": "#e3008c",
        "neutralDark": "#221f19",
        "neutralLight": "#12100d",
        "neutralLighter": "#0c0a07",
        "neutralLighterAlt": "#f8f8f8",
        "neutralPrimary": "#cbc5be",
        "neutralPrimaryAlt": "#b6ac9e",
        "neutralQuaternary": "#d0d0d0",
        "neutralQuaternaryAlt": "#dadada",
        "neutralSecondary": "#9b9285",
        "neutralSecondaryAlt": "#767676",
        "neutralTertiary": "#221f19",
        "neutralTertiaryAlt": "#574f42",
        "orange": "#d83b01",
        "orangeLight": "#ea4300",
        "orangeLighter": "#ff8c00",
        "purple": "#5c2d91",
        "purpleDark": "#32145a",
        "purpleLight": "#b4a0ff",
        "red": "#d1423b",
        "redDark": "#9e3028",
        "teal": "#008272",
        "tealDark": "#004b50",
        "tealLight": "#00b294",
        "themeDark": "#9ac3ff",
        "themeDarkAlt": "#4579C8",
        "themeDarker": "#e9eff8",
        "themeLight": "#c7e0f4",
        "themeLighter": "#386cbb",
        "themeLighterAlt": "#264f8c",
        "themePrimary": "#6c98d9",
        "themeSecondary": "#2b88d8",
        "themeTertiary": "#71afe5",
        "white": "#000000",
        "whiteTranslucent40": "rgba(255,255,255,.4)",
        "yellow": "#ffc56c",
        "yellowLight": "#fff100",
      },
      "semanticColors": Object {
        "actionLink": "#cbc5be",
        "actionLinkHovered": "#221f19",
        "blockingBackground": "rgba(234, 67, 0, .5)",
        "bodyBackground": "#000000",
        "bodyDivider": "#221f19",
        "bodyFrameBackground": "#000000",
        "bodyFrameDivider": "#12100d",
        "bodyStandoutBackground": "#000000",
        "bodySubtext": "#9b9285",
        "bodyText": "#cbc5be",
        "bodyTextChecked": "#ffffff",
        "buttonBackground": "#0c0a07",
        "buttonBackgroundChecked": "#574f42",
        "buttonBackgroundCheckedHovered": "#12100d",
        "buttonBackgroundHovered": "#12100d",
        "buttonBackgroundPressed": "#12100d",
        "buttonBorder": "transparent",
        "buttonBorderDisabled": "transparent",
        "buttonText": "#b6ac9e",
        "buttonTextChecked": "#221f19",
        "buttonTextCheckedHovered": "#ffffff",
        "buttonTextDisabled": "#d0d0d0",
        "buttonTextHovered": "#ffffff",
        "buttonTextPressed": "#221f19",
        "defaultStateBackground": "#12100d",
        "disabledBackground": "#0c0a07",
        "disabledBodyText": "#574f42",
        "disabledSubtext": "#d0d0d0",
        "disabledText": "#221f19",
        "errorBackground": "#fb7f78",
        "errorText": "#d1423b",
        "focusBorder": "#ffffff",
        "inputBackground": "#000000",
        "inputBackgroundChecked": "#9ac3ff",
        "inputBackgroundCheckedHovered": "#6c98d9",
        "inputBorder": "#221f19",
        "inputBorderHovered": "#221f19",
        "inputFocusBorderAlt": "#6c98d9",
        "inputForegroundChecked": "#000000",
        "inputPlaceholderText": "#9b9285",
        "link": "#9ac3ff",
        "linkHovered": "#e9eff8",
        "listBackground": "#000000",
        "listHeaderBackgroundHovered": "#0c0a07",
        "listHeaderBackgroundPressed": "#12100d",
        "listItemBackgroundChecked": "#12100d",
        "listItemBackgroundCheckedHovered": "#dadada",
        "listItemBackgroundHovered": "#0c0a07",
        "listText": "#cbc5be",
        "listTextColor": "#cbc5be",
        "menuHeader": "#6c98d9",
        "menuIcon": "#6c98d9",
        "menuItemBackgroundChecked": "#12100d",
        "menuItemBackgroundHovered": "#0c0a07",
        "primaryButtonBackground": "#6c98d9",
        "primaryButtonBackgroundHovered": "#4579C8",
        "primaryButtonBackgroundPressed": "#9ac3ff",
        "primaryButtonBorder": "transparent",
        "primaryButtonText": "#000000",
        "primaryButtonTextHovered": "#000000",
        "primaryButtonTextPressed": "#000000",
        "smallInputBorder": "#9b9285",
        "successBackground": "rgba(186, 216, 10, .4)",
        "variantBorder": "#12100d",
        "variantBorderHovered": "#221f19",
        "warningBackground": "#ffc56c",
        "warningHighlight": "#fff100",
        "warningText": "#ffffff",
      },
      "typography": Object {
        "families": Object {
          "default": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
          "monospace": "Menlo, Monaco, \\"Courier New\\", monospace",
        },
        "sizes": Object {
          "large": "17px",
          "medium": "14px",
          "mediumPlus": "15px",
          "mega": "72px",
          "mini": "10px",
          "small": "12px",
          "smallPlus": "13px",
          "xLarge": "21px",
          "xSmall": "11px",
          "xxLarge": "28px",
        },
        "variants": Object {
          "caption": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "11px",
            "weight": 400,
          },
          "default": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "14px",
            "weight": 400,
          },
          "h1": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "72px",
            "weight": 100,
          },
          "h2": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "28px",
            "weight": 100,
          },
          "h3": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "21px",
            "weight": 100,
          },
          "h4": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "17px",
            "weight": 100,
          },
          "h5": Object {
            "color": undefined,
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": undefined,
            "size": "15px",
            "weight": 100,
          },
          "link": Object {
            "color": "#9ac3ff",
            "disabledColor": undefined,
            "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
            "hoverColor": "#e9eff8",
            "size": "14px",
            "weight": 400,
          },
        },
        "weights": Object {
          "bold": 700,
          "default": 400,
          "light": 100,
          "regular": 400,
          "semibold": 600,
        },
      },
    }
  }
>
  <Customizer
    scopedSettings={
      Object {
        "CalloutContent": Object {
          "styles": Object {
            "calloutMain": Object {
              "boxSizing": "border-box",
              "selectors": Object {
                "*, *::before, *::after": Object {
                  "boxSizing": "inherit",
                },
              },
            },
          },
        },
        "Modal": Object {
          "styles": Object {
            "root": Object {
              "boxSizing": "border-box",
              "selectors": Object {
                "*, *::before, *::after": Object {
                  "boxSizing": "inherit",
                },
              },
            },
          },
        },
      }
    }
    settings={
      Object {
        "theme": Object {
          "disableGlobalClassNames": false,
          "fonts": Object {
            "large": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.8rem",
              "fontWeight": 300,
              "lineHeight": "2.4rem",
            },
            "medium": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "2.0rem",
            },
            "mediumPlus": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "15px",
              "fontWeight": 400,
            },
            "mega": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "72px",
              "fontWeight": 100,
            },
            "small": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.2rem",
              "fontWeight": 400,
              "lineHeight": "1.6rem",
            },
            "smallPlus": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.4rem",
              "fontWeight": 400,
              "lineHeight": "2.0rem",
            },
            "superLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "42px",
              "fontWeight": 100,
            },
            "tiny": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "10px",
              "fontWeight": 600,
            },
            "xLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "2.2rem",
              "fontWeight": 100,
              "lineHeight": "2.8rem",
            },
            "xSmall": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "1.0rem",
              "fontWeight": 400,
              "lineHeight": "1.6rem",
            },
            "xxLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "2.4rem",
              "fontWeight": 100,
              "lineHeight": "2.8rem",
            },
          },
          "isInverted": true,
          "palette": Object {
            "accent": "#6c98d9",
            "black": "#ffffff",
            "blackTranslucent40": "rgba(0,0,0,.4)",
            "blue": "#0078d4",
            "blueDark": "#002050",
            "blueLight": "#00bcf2",
            "blueMid": "#00188f",
            "green": "#107c10",
            "greenDark": "#004b1c",
            "greenLight": "#bad80a",
            "magenta": "#b4009e",
            "magentaDark": "#5c005c",
            "magentaLight": "#e3008c",
            "neutralDark": "#221f19",
            "neutralLight": "#12100d",
            "neutralLighter": "#0c0a07",
            "neutralLighterAlt": "#f8f8f8",
            "neutralPrimary": "#cbc5be",
            "neutralPrimaryAlt": "#b6ac9e",
            "neutralQuaternary": "#d0d0d0",
            "neutralQuaternaryAlt": "#dadada",
            "neutralSecondary": "#9b9285",
            "neutralSecondaryAlt": "#767676",
            "neutralTertiary": "#221f19",
            "neutralTertiaryAlt": "#574f42",
            "orange": "#d83b01",
            "orangeLight": "#ea4300",
            "orangeLighter": "#ff8c00",
            "purple": "#5c2d91",
            "purpleDark": "#32145a",
            "purpleLight": "#b4a0ff",
            "red": "#d1423b",
            "redDark": "#9e3028",
            "teal": "#008272",
            "tealDark": "#004b50",
            "tealLight": "#00b294",
            "themeDark": "#9ac3ff",
            "themeDarkAlt": "#4579C8",
            "themeDarker": "#e9eff8",
            "themeLight": "#c7e0f4",
            "themeLighter": "#386cbb",
            "themeLighterAlt": "#264f8c",
            "themePrimary": "#6c98d9",
            "themeSecondary": "#2b88d8",
            "themeTertiary": "#71afe5",
            "white": "#000000",
            "whiteTranslucent40": "rgba(255,255,255,.4)",
            "yellow": "#ffc56c",
            "yellowLight": "#fff100",
          },
          "semanticColors": Object {
            "actionLink": "#cbc5be",
            "actionLinkHovered": "#221f19",
            "blockingBackground": "rgba(234, 67, 0, .5)",
            "bodyBackground": "#000000",
            "bodyDivider": "#221f19",
            "bodyFrameBackground": "#000000",
            "bodyFrameDivider": "#12100d",
            "bodyStandoutBackground": "#000000",
            "bodySubtext": "#9b9285",
            "bodyText": "#cbc5be",
            "bodyTextChecked": "#ffffff",
            "buttonBackground": "#0c0a07",
            "buttonBackgroundChecked": "#574f42",
            "buttonBackgroundCheckedHovered": "#12100d",
            "buttonBackgroundHovered": "#12100d",
            "buttonBackgroundPressed": "#12100d",
            "buttonBorder": "transparent",
            "buttonBorderDisabled": "transparent",
            "buttonText": "#b6ac9e",
            "buttonTextChecked": "#221f19",
            "buttonTextCheckedHovered": "#ffffff",
            "buttonTextDisabled": "#d0d0d0",
            "buttonTextHovered": "#ffffff",
            "buttonTextPressed": "#221f19",
            "defaultStateBackground": "#12100d",
            "disabledBackground": "#0c0a07",
            "disabledBodyText": "#574f42",
            "disabledSubtext": "#d0d0d0",
            "disabledText": "#221f19",
            "errorBackground": "#fb7f78",
            "errorText": "#d1423b",
            "focusBorder": "#ffffff",
            "inputBackground": "#000000",
            "inputBackgroundChecked": "#9ac3ff",
            "inputBackgroundCheckedHovered": "#6c98d9",
            "inputBorder": "#221f19",
            "inputBorderHovered": "#221f19",
            "inputFocusBorderAlt": "#6c98d9",
            "inputForegroundChecked": "#000000",
            "inputPlaceholderText": "#9b9285",
            "link": "#9ac3ff",
            "linkHovered": "#e9eff8",
            "listBackground": "#000000",
            "listHeaderBackgroundHovered": "#0c0a07",
            "listHeaderBackgroundPressed": "#12100d",
            "listItemBackgroundChecked": "#12100d",
            "listItemBackgroundCheckedHovered": "#dadada",
            "listItemBackgroundHovered": "#0c0a07",
            "listText": "#cbc5be",
            "listTextColor": "#cbc5be",
            "menuHeader": "#6c98d9",
            "menuIcon": "#6c98d9",
            "menuItemBackgroundChecked": "#12100d",
            "menuItemBackgroundHovered": "#0c0a07",
            "primaryButtonBackground": "#6c98d9",
            "primaryButtonBackgroundHovered": "#4579C8",
            "primaryButtonBackgroundPressed": "#9ac3ff",
            "primaryButtonBorder": "transparent",
            "primaryButtonText": "#000000",
            "primaryButtonTextHovered": "#000000",
            "primaryButtonTextPressed": "#000000",
            "smallInputBorder": "#9b9285",
            "successBackground": "rgba(186, 216, 10, .4)",
            "variantBorder": "#12100d",
            "variantBorderHovered": "#221f19",
            "warningBackground": "#ffc56c",
            "warningHighlight": "#fff100",
            "warningText": "#ffffff",
          },
          "typography": Object {
            "families": Object {
              "default": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "monospace": "Menlo, Monaco, \\"Courier New\\", monospace",
            },
            "sizes": Object {
              "large": "17px",
              "medium": "14px",
              "mediumPlus": "15px",
              "mega": "72px",
              "mini": "10px",
              "small": "12px",
              "smallPlus": "13px",
              "xLarge": "21px",
              "xSmall": "11px",
              "xxLarge": "28px",
            },
            "variants": Object {
              "caption": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "11px",
                "weight": 400,
              },
              "default": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "14px",
                "weight": 400,
              },
              "h1": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "72px",
                "weight": 100,
              },
              "h2": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "28px",
                "weight": 100,
              },
              "h3": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "21px",
                "weight": 100,
              },
              "h4": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "17px",
                "weight": 100,
              },
              "h5": Object {
                "color": undefined,
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": undefined,
                "size": "15px",
                "weight": 100,
              },
              "link": Object {
                "color": "#9ac3ff",
                "disabledColor": undefined,
                "family": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                "hoverColor": "#e9eff8",
                "size": "14px",
                "weight": 400,
              },
            },
            "weights": Object {
              "bold": 700,
              "default": 400,
              "light": 100,
              "regular": 400,
              "semibold": 600,
            },
          },
        },
      }
    }
  >
    <div
      className=
          y-appContainer
          {
            box-sizing: border-box;
          }
          & *, *::before, *::after {
            box-sizing: inherit;
          }
          html {
            font-size: 62.5%;
          }
          html, body {
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
          }
    >
      app container text
    </div>
  </Customizer>
</StyledFabricBase>
`;
